fear: create registration feature, create unit test for registeration, implement api doc swagger. Create public function in Child model to count age. Create child, guardian, observation, family repository
